# openfusion

./: .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .gitignore  AGENTS.md  README.md  dev.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: BUILDING.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: notarize-staple-dmg.mjs  notarize-staple-dmg.test.mjs  presign-sidecar-assets.mjs  presign-sidecar-assets.test.mjs  stage-sandbox-runner.mjs  stage-sidecar.mjs
apps/desktop/src/: App.test.tsx  App.tsx  ProjectContext.test.tsx  ProjectContext.tsx  engineClient.harness.test.ts  engineClient.projects.test.ts  engineClient.test.ts  engineClient.ts  frontierPreferences.ts  main.ts  main.tsx  noConsoleLogging.test.ts  providerCatalog.test.ts  providerCatalog.ts  router.ts  styles.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  engine_bridge.rs  frontier.rs  lib.rs  main.rs  mock_common_support.rs  projects.rs  providers.rs  secrets.rs
apps/desktop/src-tauri/tests/: commands.rs  engine_bridge.rs  lifecycle.rs
apps/desktop/src/components/: AppRail.test.tsx  AppRail.tsx  ErrorBoundary.tsx  FrontierRolesPane.test.tsx  FrontierRolesPane.tsx  HarnessSettingPanel.test.tsx  HarnessSettingPanel.tsx  Logo.tsx  ModelProvidersPane.test.tsx  ModelProvidersPane.tsx  Nav.tsx  OrchestratorsPane.test.tsx  OrchestratorsPane.tsx  ProjectRail.test.tsx  ProjectRail.tsx  RuntimeSettingsPane.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  WorkspaceSidebar.tsx  WorkspaceToolbar.tsx
apps/desktop/src/dev/: tauriCoreMock.ts  tauriDialogMock.ts
apps/desktop/src/screens/: EvalsScreen.test.tsx  EvalsScreen.tsx  HarnessHealthScreen.test.tsx  HarnessHealthScreen.tsx  KeysScreen.test.tsx  KeysScreen.tsx  OrchestrateScreen.test.tsx  OrchestrateScreen.tsx  ProjectScreen.test.tsx  ProjectScreen.tsx  StubScreen.tsx
apps/desktop/src/ui/: ConfirmDialog.tsx  Dialog.test.tsx  Dialog.tsx  Icon.tsx  Spinner.tsx
benchmarks/: README.md  swe-bench-verified-mini.json
docs/: README.md
docs/agents/: README.md  architecture.md  conventions.md  map.json  product-vision.md  project-map.md  testing.md  workflows.md
docs/agents/subsystems/: desktop.md  engine.md  evaluations.md  orchestration.md  runtime.md  wiki-harness.md
docs/human/: README.md  architecture.md  development.md  documentation.md  getting-started.md  product-vision.md  runtime.md  workflows.md
docs/knowledge_base/: README.md  index.md  log.md
docs/research/: 2026-07-03-m1-api-verification.md  2026-07-03-m2-api-verification.md  2026-07-03-m3-api-verification.md  2026-07-03-oss-landscape.md  2026-07-04-m5-api-verification.md  2026-07-04-m6-pricing-eval-verification.md  2026-07-04-m7-tauri-verification.md  2026-07-04-m8-signing-verification.md  2026-07-07-harness-composition.md  2026-07-10-coding-harness-source-audit.md  2026-07-10-harness-engineering-deep-research.md  2026-07-10-weng-wpti-self-improvement-deltas.md  2026-07-12-best-harness-components.md  2026-07-12-harness-economics-model-mix-caching-and-owned-loop.md  2026-07-13-bench-statistical-protocol.md
docs/superpowers/plans/: 2026-07-03-m0-scaffold-engine-core.md  2026-07-03-m1a-wiki-foundation.md  2026-07-03-m1b-wiki-map-mcp.md  2026-07-03-m2-models-layer.md  2026-07-03-m3-frontier-engines.md  2026-07-03-roadmap.md  2026-07-04-m4-harnessgen.md  2026-07-04-m5a-worker-substrate.md  2026-07-04-m5b-orchestration.md  2026-07-04-m6-evals.md  2026-07-04-m7a-shell-backbone.md  2026-07-04-m7b-cockpit-foundation.md  2026-07-04-m7c-cockpit-screens.md  2026-07-04-m8-signed-dmg.md  2026-07-06-harness-team-cockpit.md  2026-07-06-settings-redesign-byok-frontier-connect.md  2026-07-07-m6.1-eval-gate-hardening.md  2026-07-08-run-ledger.md  2026-07-08-wiki-project-card.md  2026-07-10-apple-minimal-ui-ux-redesign.md  2026-07-10-harness-learning-spine.md  2026-07-10-stage-verification-gates.md  2026-07-13-arch-phase0-1-stabilize-and-guardrails.md
docs/superpowers/specs/: 2026-07-03-harness-fusion-app-design.md  2026-07-06-harness-team-cockpit-design.md  2026-07-06-settings-redesign-byok-frontier-connect-design.md  2026-07-08-run-ledger-design.md  2026-07-08-wiki-project-card-design.md  2026-07-09-eval-benchmark-suite-design.md  2026-07-09-model-family-dialect-packs-design.md  2026-07-12-evidence-driven-harness-prd.md  2026-07-13-clean-architecture-design.md
native/sandbox-runner/: Cargo.toml
native/sandbox-runner/src/: main.rs
scripts/: check-docs.mjs  check-file-budget.mjs  check-file-budget.test.mjs  file-budget-baseline.json  query-docs.mjs
