[package]
name = "openfusion-desktop"
version = "0.0.1"
description = "OpenFusion desktop shell"
authors = ["OpenFusion"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib
# name unique so it doesn't conflict with the bin name (Windows-specific
# issue, see https://github.com/rust-lang/cargo/issues/8519).
name = "openfusion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openfusion-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
